--- a/app/translations/translations.en.json
+++ b/app/translations/translations.en.json
@@ -5,6 +5,8 @@
   "MailingList": "Mailing list",
   "Files": "Files",
   "Users": "Users",
+  "CreatePage": "Create page",
+  "EditPage": "Edit page",
 
   "ButtonNew": "New",
 
@@ -30,6 +32,12 @@
   "No": "No",
   "Save": "Save",
   "Cancel": "Cancel",
+  "Content": "Content",
+  "VisibleOnNavigation": "Visible on navigation",
+  "Create": "Create",
+  "Delete": "Delete",
+  "Keyword": "Keyword",
 
-  "InfoChangeOrder": "Drag a row upwards or downwards to change the order"
+  "InfoChangeOrder": "Drag a row upwards or downwards to change the order",
+  "InfoDelete": "Are you sure you want to delete this? This action cannot be reverted."
 }
