Adds translations to navigation

--- a/app/translations/translations.en.json
+++ b/app/translations/translations.en.json
@@ -37,6 +37,9 @@
   "Create": "Create",
   "Delete": "Delete",
   "Keyword": "Keyword",
+  "Logout": "Logout",
+  "ChangePassword": "Change password",
+  "ChangeInformation": "Change information",
 
   "InfoChangeOrder": "Drag a row upwards or downwards to change the order",
   "InfoDelete": "Are you sure you want to delete this? This action cannot be reverted."
