--- a/app/translations/translations.en.json
+++ b/app/translations/translations.en.json
@@ -13,6 +13,8 @@
   "EditNewsletter": "Edit newsletter",
   "AddRecipient": "Add recipient",
   "EditRecipient": "Edit recipient",
+  "UploadFiles": "Upload files",
+  "EditFile": "Edit file",
 
   "ButtonNew": "New",
 
@@ -66,7 +68,10 @@
   "Unsubscribed": "Unsubscribed",
   "Add": "Add",
   "WantsNewsletter": "Would like to receive the newsletter?",
+  "Upload": "Upload",
+  "ChooseFiles": "Choose files",
 
   "InfoChangeOrder": "Drag a row upwards or downwards to change the order",
-  "InfoDelete": "Are you sure you want to delete this? This action cannot be reverted."
+  "InfoDelete": "Are you sure you want to delete this? This action cannot be reverted.",
+  "InfoAllowedFiles": "Following files are allowed: jpg, png, gif en pdf"
 }
