--- a/app/translations/translations.en.json
+++ b/app/translations/translations.en.json
@@ -15,6 +15,9 @@
   "EditRecipient": "Edit recipient",
   "UploadFiles": "Upload files",
   "EditFile": "Edit file",
+  "CreateUser": "Create user",
+  "EditUser": "Edit user",
+  "ActivateAccount": "Account activeren",
 
   "ButtonNew": "New",
 
@@ -70,6 +73,13 @@
   "WantsNewsletter": "Would like to receive the newsletter?",
   "Upload": "Upload",
   "ChooseFiles": "Choose files",
+  "Rights": "Rights",
+  "NotActivated": "Not activated",
+  "Admin": "Admin",
+  "Normal": "Normal",
+  "Password": "Password",
+  "ConfirmPassword": "Confirm password",
+  "Activate": "Activate",
 
   "InfoChangeOrder": "Drag a row upwards or downwards to change the order",
   "InfoDelete": "Are you sure you want to delete this? This action cannot be reverted.",
