--- a/app/translations/translations.en.json
+++ b/app/translations/translations.en.json
@@ -17,7 +17,8 @@
   "EditFile": "Edit file",
   "CreateUser": "Create user",
   "EditUser": "Edit user",
-  "ActivateAccount": "Account activeren",
+  "ActivateAccount": "Activate account",
+  "EditAccountInformation": "Edit account information",
 
   "ButtonNew": "New",
 
@@ -41,7 +42,7 @@
   "Locked": "Locked",
   "Yes": "Yes",
   "No": "No",
-  "Save": "Save",
+  "Save": "Save changes",
   "Cancel": "Cancel",
   "Content": "Content",
   "VisibleOnNavigation": "Visible on navigation",
@@ -80,6 +81,8 @@
   "Password": "Password",
   "ConfirmPassword": "Confirm password",
   "Activate": "Activate",
+  "FirstName": "First name",
+  "LastName": "Last name",
 
   "InfoChangeOrder": "Drag a row upwards or downwards to change the order",
   "InfoDelete": "Are you sure you want to delete this? This action cannot be reverted.",
